# sp2ts

./: README.md  __init__.py  example.py  pyproject.toml  requirements_dev.txt  setup.py  test_sp2ts.py
.github/workflows/: .flake8-config.ini  python-app.yml
Tests/: test_sp2ts.py
sp2ts/: __init__.py  get_transition_dates.py  sp2ts.py
